--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Notes Expert</title>
 </head>
 
-<body>
+<body class="bg-slate-900">
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
